--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="search_instructions_1">Enter keyword:</string>
     <string name="search_instructions_2">Enter another keyword (optional):</string>
     <string name="search_hint"> &#8212; enter keyword &#8212; </string>
-    <string name="query_check">no query &#8212; add keyword</string>
+    <string name="order">Order results by:</string>
+    <string name="relevance">Relevance</string>
+    <string name="date">Date of publishing (newest first)</string>
     <string name="and">AND</string>
     <string name="or">OR</string>
     <string name="search">search</string>
@@ -20,4 +22,5 @@
     <string name="no_results_found_hint">You may want to choose different keywords or relax the
         constraints (e.g. switch the query logic from AND to OR).</string>
     <string name="new_search">New search</string>
+    <string name="no_img_available">No image available</string>
 </resources>
