--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,15 @@
     <string name="img_content_descr">book cover</string>
     <string name="img_book_content_descr">image of a book, made by Freepik from www.flaticon.com </string>
     <string name="icon_content_descr">search icon</string>
-    <string name="search_instructions_1">Enter keyword:</string>
-    <string name="search_instructions_2">Enter another keyword (optional):</string>
-    <string name="search_hint"> &#8212; enter keyword &#8212; </string>
+    <string name="search_instructions_1">Search by keyword:</string>
+    <string name="search_instructions_2">Search items containing string:</string>
+    <string name="search_hint_keyword"> &#8212;&#8212; type keyword here &#8212;&#8212; </string>
+    <string name="search_hint_string"> &#8212;&#8212; type string here &#8212;&#8212; </string>
     <string name="order">Order results by:</string>
     <string name="relevance">Relevance</string>
     <string name="date">Date of publishing (newest first)</string>
-    <string name="and">AND</string>
-    <string name="or">OR</string>
+    <string name="radio_author">in Author</string>
+    <string name="radio_title">in Title</string>
     <string name="search">search</string>
     <string name="title">\"Title of the volume\"</string>
     <string name="authors">Authors, divided by commas</string>
